syntax = "proto3";

package owner;

service OwnerService {
  rpc FindById (FindOwnerById) returns (Owner) {}
}

message FindOwnerById {
  string ownerId = 1;
}

message Owner {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string address = 4;
}