syntax = "proto3";

package product;

service ProductService {
  rpc GetPoducts(GetProductsRequest) returns (GetProductsResponse);
}

message GetProductsRequest {
  repeated string ids = 1;
}

message GetProductsResponse {
  repeated Product products = 1;
}

message Product {
  string id = 1;
  string name = 2;
  string price = 3;
  string description = 4;
  string sku = 5;
  string ownerId = 6;
}