syntax = "proto3";

package owner;

import "google/protobuf/timestamp.proto";

service OwnerService {
  rpc GetOwner (GetOwnerRequest) returns (GetOwnerResponse) {}
}

message GetOwnerRequest {
  string ownerId = 1;
}

message Owner {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string address = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}

message GetOwnerResponse {
   Owner owner = 1;
}